--- a/render.yaml
+++ b/render.yaml
@@ -1,20 +1,15 @@
 services:
   - type: web
-    name: id-redactor-backend
+    name: id-redaction-api
     env: python
-    runtime: python3
     buildCommand: pip install -r requirements.txt
     startCommand: uvicorn api_app:app --host 0.0.0.0 --port 8000
     envVars:
       - key: GEMINI_API_KEY
-        value: AIzaSyBRCzdZzYn7q7v8I2_Z1jNn1PYATrYeoFc
+        value: <your-gemini-api-key>
 
   - type: web
-    name: id-redactor-frontend
+    name: id-redaction-ui
     env: python
-    runtime: python3
     buildCommand: pip install -r requirements.txt
     startCommand: streamlit run streamlit_ui.py --server.port 10000
-    envVars:
-      - key: BACKEND_URL
-        value: https://id-redactor-backend.onrender.com
