--- a/render.yaml
+++ b/render.yaml
@@ -3,10 +3,9 @@ services:
     name: image-redaction-service
     env: docker
     plan: free
-    buildCommand: ""
     startCommand: ./start.sh
     envVars:
       - key: GEMINI_API_KEY
-        value: your-secret-here
+        value: your-gemini-api-key-here
     ports:
-      - port: 10000  # expose only Streamlit UI
+      - port: 10000  # Expose frontend port (Streamlit)
