--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,15 @@
 services:
   - type: web
-    name: image-redaction-service
-    env: docker
-    plan: free
-    startCommand: ./start.sh
+    name: id-redaction-api
+    env: python
+    buildCommand: pip install -r requirements.txt
+    startCommand: uvicorn api_app:app --host 0.0.0.0 --port 8000
     envVars:
       - key: GEMINI_API_KEY
-        value: your-gemini-api-key-here
-    ports:
-      - port: 10000  # Expose frontend port (Streamlit)
+        value: <your-gemini-api-key>
+
+  - type: web
+    name: id-redaction-ui
+    env: python
+    buildCommand: pip install -r requirements.txt
+    startCommand: streamlit run streamlit_ui.py --server.port 10000
