--- a/render.yaml
+++ b/render.yaml
@@ -1,15 +1,9 @@
 services:
   - type: web
-    name: id-redaction-api
+    name: doc-masker
     env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn api_app:app --host 0.0.0.0 --port 8000
-    envVars:
-      - key: GEMINI_API_KEY
-        value: <your-gemini-api-key>
-
-  - type: web
-    name: id-redaction-ui
-    env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: streamlit run streamlit_ui.py --server.port 10000
+    buildCommand: |
+      apt-get update && apt-get install -y tesseract-ocr libgl1-mesa-glx poppler-utils fonts-dejavu-core
+      pip install --no-cache-dir -r requirements.txt
+    startCommand: streamlit run streamlit_ui.py --server.port=10000 --server.address=0.0.0.0
+    plan: free
