--- a/.dockerignore
+++ b/.dockerignore
@@ -1,13 +1,11 @@
-__pycache__/
-venv/
+__pycache__
 *.pyc
 *.pyo
 *.pyd
-*.log
-uploads/
-output/
-.DS_Store
 .env
-*.jpg
-*.png
-*.pdf
+.venv
+venv
+uploads
+output
+*.db
+*.log
